person class methods in data access layer done

--- a/DVLD.DataAccess/DVLD.DataAccess.csproj
+++ b/DVLD.DataAccess/DVLD.DataAccess.csproj
@@ -42,8 +42,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="ClsPerson.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ClsDataType\ClsDataType.csproj">
+      <Project>{00b58b68-a540-4a37-b3db-564f81020c94}</Project>
+      <Name>ClsDataType</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
