--- a/ClsDataType/ClsDataType.csproj
+++ b/ClsDataType/ClsDataType.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B3DE29A3-12FF-4C66-A716-6451381CE560}</ProjectGuid>
+    <ProjectGuid>{00B58B68-A540-4A37-B3DB-564F81020C94}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DVLD.BusinessLogic</RootNamespace>
-    <AssemblyName>DVLD.BusinessLogic</AssemblyName>
+    <RootNamespace>ClsDataType</RootNamespace>
+    <AssemblyName>ClsDataType</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,15 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
-    <Compile Include="People.cs" />
+    <Compile Include="ClsDataType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DVLD.DataAccess\DVLD.DataAccess.csproj">
-      <Project>{6c181f6d-896f-40e9-8da3-f2191dd3b340}</Project>
-      <Name>DVLD.DataAccess</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
