--- a/DVLD.DataAccess/DVLD.DataAccess.csproj
+++ b/DVLD.DataAccess/DVLD.DataAccess.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="ClsCountry.cs" />
     <Compile Include="ClsPerson.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
