--- a/DVLD.Presentation/DVLD.Presentation.csproj
+++ b/DVLD.Presentation/DVLD.Presentation.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClsUtil.cs" />
     <Compile Include="ClsValidation.cs" />
     <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
