--- a/DVLD.Presentation/DVLD.Presentation.csproj
+++ b/DVLD.Presentation/DVLD.Presentation.csproj
@@ -54,16 +54,16 @@
     <Compile Include="FrmMain.Designer.cs">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="People\Controls\CtrlUserDetails.cs">
+    <Compile Include="Controls\CtrlUserDetails.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="People\Controls\CtrlUserDetails.Designer.cs">
+    <Compile Include="Controls\CtrlUserDetails.Designer.cs">
       <DependentUpon>CtrlUserDetails.cs</DependentUpon>
     </Compile>
-    <Compile Include="People\Controls\CtrlUserDetailsWithFilter.cs">
+    <Compile Include="Controls\CtrlUserDetailsWithFilter.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="People\Controls\CtrlUserDetailsWithFilter.Designer.cs">
+    <Compile Include="Controls\CtrlUserDetailsWithFilter.Designer.cs">
       <DependentUpon>CtrlUserDetailsWithFilter.cs</DependentUpon>
     </Compile>
     <Compile Include="People\FrmAddEditPerson.cs">
@@ -92,13 +92,19 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User\FrmAddUpdateUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="User\FrmAddUpdateUser.Designer.cs">
+      <DependentUpon>FrmAddUpdateUser.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="People\Controls\CtrlUserDetails.resx">
+    <EmbeddedResource Include="Controls\CtrlUserDetails.resx">
       <DependentUpon>CtrlUserDetails.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="People\Controls\CtrlUserDetailsWithFilter.resx">
+    <EmbeddedResource Include="Controls\CtrlUserDetailsWithFilter.resx">
       <DependentUpon>CtrlUserDetailsWithFilter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="People\FrmAddEditPerson.resx">
@@ -123,6 +129,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="User\FrmAddUpdateUser.resx">
+      <DependentUpon>FrmAddUpdateUser.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -164,5 +173,6 @@
   <ItemGroup>
     <None Include="Resources\People 400.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
