--- a/DVLD.BusinessLogic/DVLD.BusinessLogic.csproj
+++ b/DVLD.BusinessLogic/DVLD.BusinessLogic.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ClsApplicationType.cs" />
     <Compile Include="ClsCountry.cs" />
     <Compile Include="ClsPerson.cs" />
+    <Compile Include="ClsTestType.cs" />
     <Compile Include="ClsUser.cs" />
     <Compile Include="People.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
