--- a/DVLD.Presentation/DVLD.Presentation.csproj
+++ b/DVLD.Presentation/DVLD.Presentation.csproj
@@ -85,10 +85,16 @@
     <Compile Include="Controls\CtrlPersonDetailsWithFilter.Designer.cs">
       <DependentUpon>CtrlPersonDetailsWithFilter.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmTestTypes.cs">
+    <Compile Include="Tests\Test Types\FrmEditTestType.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmTestTypes.Designer.cs">
+    <Compile Include="Tests\Test Types\FrmEditTestType.Designer.cs">
+      <DependentUpon>FrmEditTestType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tests\Test Types\FrmTestTypes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tests\Test Types\FrmTestTypes.Designer.cs">
       <DependentUpon>FrmTestTypes.cs</DependentUpon>
     </Compile>
     <Compile Include="Login\FrmLogin.cs">
@@ -165,7 +171,10 @@
     <EmbeddedResource Include="Controls\CtrlPersonDetailsWithFilter.resx">
       <DependentUpon>CtrlPersonDetailsWithFilter.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmTestTypes.resx">
+    <EmbeddedResource Include="Tests\Test Types\FrmEditTestType.resx">
+      <DependentUpon>FrmEditTestType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tests\Test Types\FrmTestTypes.resx">
       <DependentUpon>FrmTestTypes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login\FrmLogin.resx">
