--- a/ClsDataType/ClsDataType.csproj
+++ b/ClsDataType/ClsDataType.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClsApplication.cs" />
     <Compile Include="ClsDataType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
