--- a/ClsDataType/ClsDataType.csproj
+++ b/ClsDataType/ClsDataType.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="ClsApplication.cs" />
     <Compile Include="ClsDataType.cs" />
+    <Compile Include="ClsLocalDrivingLicenseApplications.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
