--- a/DVLD.Presentation/DVLD.Presentation.csproj
+++ b/DVLD.Presentation/DVLD.Presentation.csproj
@@ -73,6 +73,12 @@
     <Compile Include="ClsGlobal.cs" />
     <Compile Include="ClsUtil.cs" />
     <Compile Include="ClsValidation.cs" />
+    <Compile Include="Controls\CtrlLocalDrivingLicenseApplication.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\CtrlLocalDrivingLicenseApplication.Designer.cs">
+      <DependentUpon>CtrlLocalDrivingLicenseApplication.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\CtrlUserCard.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -176,6 +182,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Applications\LocalDrivingLicenseApplication\FrmManageLocalDrivingLicenseApplication.resx">
       <DependentUpon>FrmManageLocalDrivingLicenseApplication.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\CtrlLocalDrivingLicenseApplication.resx">
+      <DependentUpon>CtrlLocalDrivingLicenseApplication.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\CtrlUserCard.resx">
       <DependentUpon>CtrlUserCard.cs</DependentUpon>
