--- a/DVLD.DataAccess/DVLD.DataAccess.csproj
+++ b/DVLD.DataAccess/DVLD.DataAccess.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ClsCountry.cs" />
     <Compile Include="ClsLocalDrivingLicenseApplications.cs" />
     <Compile Include="ClsPerson.cs" />
+    <Compile Include="ClsTestAppointment.cs" />
     <Compile Include="ClsTestType.cs" />
     <Compile Include="ClsUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
