StLicense and StDriver structs data types implemented in ClsDataType layer

--- a/ClsDataType/ClsDataType.csproj
+++ b/ClsDataType/ClsDataType.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="ClsApplication.cs" />
     <Compile Include="ClsDataType.cs" />
+    <Compile Include="ClsDriver.cs" />
+    <Compile Include="ClsLicense.cs" />
     <Compile Include="ClsLocalDrivingLicenseApplications.cs" />
     <Compile Include="ClsTakenTest.cs" />
     <Compile Include="ClsTestAppintment.cs" />
