--- a/DVLD.DataAccess/DVLD.DataAccess.csproj
+++ b/DVLD.DataAccess/DVLD.DataAccess.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ClsApplicationType.cs" />
     <Compile Include="ClsCountry.cs" />
     <Compile Include="ClsDriver.cs" />
+    <Compile Include="ClsLicense.cs" />
     <Compile Include="ClsLocalDrivingLicenseApplications.cs" />
     <Compile Include="ClsPerson.cs" />
     <Compile Include="ClsTest.cs" />
