- form manage test added - form schedule test added - add test appointment done with all logic required - ClsTests class added in business logic

--- a/DVLD.BusinessLogic/DVLD.BusinessLogic.csproj
+++ b/DVLD.BusinessLogic/DVLD.BusinessLogic.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ClsCountry.cs" />
     <Compile Include="ClsLocalDrivingLicenseApplication.cs" />
     <Compile Include="ClsPerson.cs" />
+    <Compile Include="ClsTests.cs" />
     <Compile Include="ClsTestType.cs" />
     <Compile Include="ClsUser.cs" />
     <Compile Include="People.cs" />
