CtrlPersonDetails modified to show default personal image (male, female) if image is NULL

--- a/DVLD.Presentation/DVLD.Presentation.csproj
+++ b/DVLD.Presentation/DVLD.Presentation.csproj
@@ -451,6 +451,8 @@
     <None Include="Resources\Vision 512.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\Male.png" />
+    <None Include="Resources\Female.png" />
     <Content Include="Resources\Written Test 512.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
