--- a/DVLD.Presentation/DVLD.Presentation.csproj
+++ b/DVLD.Presentation/DVLD.Presentation.csproj
@@ -372,9 +372,7 @@
   <ItemGroup>
     <None Include="Resources\DVLD_logo.PNG" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="screenshoots\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="Resources\License View 32.png" />
   </ItemGroup>
@@ -451,6 +449,8 @@
     <None Include="Resources\Vision 512.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="screenshoots\manage_users.PNG" />
+    <Content Include="screenshoots\user_information.PNG" />
     <None Include="Resources\Male.png" />
     <None Include="Resources\Female.png" />
     <Content Include="Resources\Written Test 512.png" />
