- GetDefaultValidityDateLength method implemented - HasLicenseForApplication method implemented - GetFees method implemented - issue driving license functionality done - disable and enable menu stripe items modified

--- a/DVLD.BusinessLogic/DVLD.BusinessLogic.csproj
+++ b/DVLD.BusinessLogic/DVLD.BusinessLogic.csproj
@@ -45,6 +45,8 @@
     <Compile Include="ClsApplications.cs" />
     <Compile Include="ClsApplicationType.cs" />
     <Compile Include="ClsCountry.cs" />
+    <Compile Include="ClsDriver.cs" />
+    <Compile Include="ClsLicense.cs" />
     <Compile Include="ClsLocalDrivingLicenseApplication.cs" />
     <Compile Include="ClsPerson.cs" />
     <Compile Include="ClsTests.cs" />
