--- a/DVLD.Presentation/DVLD.Presentation.csproj
+++ b/DVLD.Presentation/DVLD.Presentation.csproj
@@ -109,6 +109,12 @@
     <Compile Include="Controls\CtrlPersonDetailsWithFilter.Designer.cs">
       <DependentUpon>CtrlPersonDetailsWithFilter.cs</DependentUpon>
     </Compile>
+    <Compile Include="Licenses\IssueLicense\FrmIssueDrivingLicense.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Licenses\IssueLicense\FrmIssueDrivingLicense.Designer.cs">
+      <DependentUpon>FrmIssueDrivingLicense.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tests\FrmTakeTest.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -224,6 +230,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\CtrlPersonDetailsWithFilter.resx">
       <DependentUpon>CtrlPersonDetailsWithFilter.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Licenses\IssueLicense\FrmIssueDrivingLicense.resx">
+      <DependentUpon>FrmIssueDrivingLicense.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Tests\FrmTakeTest.resx">
       <DependentUpon>FrmTakeTest.cs</DependentUpon>
